Removed the aspect ratio bit off of the header, it should scale to the height of whatever image is provided. May be wrong. Removed the google maps api key.

--- a/www/src/app.scss
+++ b/www/src/app.scss
@@ -45,6 +45,12 @@ body {
     }
 }
 
+.swiper-container {
+    .swiper-slide {
+        line-height: 0;
+    }
+}
+
 .navbar {
     background: color(primary, base);
     color: color(neutral, lighter);
