Added aspect ratio back in. Forgot contentful restricts the sizes. Added line-height: 0; for images so it confirms to image height

--- a/www/src/app.scss
+++ b/www/src/app.scss
@@ -88,6 +88,14 @@ body {
     }
 }
 
+.home {
+    card {
+        image-embed {
+            line-height: 0;
+        }
+    }
+}
+
 .home-postGroup-summary {
     img {
         width: 100%;
